pridani moznosti smazat kontrolku, vylepseni vyberu pridanim seznamu

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
     <br>
     <button id = "customise_logic" onclick="customise_logic()">Zmenit logiku</button>
-    <button id = "add_control" onclick="add_control()">Pridat kontrolku</button>
     <button id = "add_logic" onclick="add_logic()">Pridat logiku</button>
+    <button id = "add_control" onclick="add_control()">Pridat kontrolku</button>
     <br>
-
-    <button id = "current_logic" onclick="current_logic()">seznam nastavene logiky</button>
-    <button id = "current_controls" onclick="current_controls()">seznam kontrolek</button>
+    <button id = "current_logic" onclick="current_logic(false)">seznam nastavene logiky</button>
+    <button id = "current_controls" onclick="current_controls(false)">seznam kontrolek</button>
+    <br>
+    <button id = "delete_control" onclick="delete_control()">smazat kontrolku</button>
+    
 
     <div class = "hidden" id= "custom_prompt">
         <div id = "prompttext">
